--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body{
     background-color: #EEE;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: red;
+}
+
+h1, h2, h3 {
+    margin: 0;
 }
 
 #container {
@@ -25,6 +35,15 @@ padding: 10px;
     float: left;
 }
 
+#nav .selected {
+    font-weight: bold;
+}
+
+#nav ul{
+    list-style-type:none;
+    padding: 0;
+}
+
 #main{ 
     width: 600px;
     float: right;
@@ -32,4 +51,8 @@ padding: 10px;
 
 #footer{
 clear: both;
+padding: 10px;
+background-color: grey;
+color: white;
+text-align: right;
 }
